# prolog-experiments

AMZI Workspace/Multi-Clipboard Data/: multiClipboardContents.xml
External Sources/ActiveX/: About1.dcu  About1.dfm  About1.pas  AmziXImpl.dcu  AmziXImpl.pas  AmziXLibrary.dof  AmziXLibrary.dpr  AmziXLibrary.dsk  AmziXLibrary.htm  AmziXLibrary.inf  AmziXLibrary.ocx  AmziXLibrary.res  AmziXLibrary.tlb  AmziXLibrary_TLB.dcr  AmziXLibrary_TLB.dcu  AmziXLibrary_TLB.pas  Extend.dof  Extend.dpr  Extend.dsk  Extend.lsx  Extend.res  MyWeb.pas  amzi4.dcu  amzi4.pas  hello.plm  hello.pro  hello.xpl
External Sources/OOPL/: .project  amzi.cfg  build.properties  readme.txt
External Sources/PrologDoc/prologdoc-1.0RC2/: CHANGELOG  INSTALL  MANIFEST  Makefile.in  PrologDoc.1  PrologDoc.pod  README  ascii_symbols.pl  config.pl  configure  configure.ac  file_parser.pl  file_translater.pl  pldoc.1  pldoc.in  pldoc.pl  prolog_doc.pl  style.css
External Sources/Sources/: Lists.txt  bin_arith.pl  cugini.pl  dlists.descr  dlists.pl  dlists.pre  higher_order.pl  intervals.descr  intervals.pl  intervals.pre  intervals.tst  list_utilities.pl  priorityqueue.pl  set_utilities.pl  vaucher.descr  vaucher.doc  vaucher.pl  vaucher.pre  vauchertest.pl
External Sources/exlibris-0_2/: Readme.txt  (+1 more)
Modules/: .project  Array.pro  List.pro  Map.pro  Maths.pro  Meta.pro  Prolog.robodoc  Properties.pro  Stack.pro  Utilities.pro  boolean.pro  build.properties  ctype.pro
Working/: .project  Interval.pro  ParseFile.pro  Relations.pro  SparseArray.pro  Storage.pro  Window.pro  build.properties
(+516 files in other folders)
